new rules applied

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
 	<title>Welcome to my webpage</title>
 </head>
 <body>
-	Hello, world. This is shenzhen.
+	Hello, world. This is WXZ from shenzhen. PLEASE USE MY RULES
 </body>
 </html>
