some stype changed

--- a/HelloGoogle.html
+++ b/HelloGoogle.html
@@ -5,7 +5,8 @@
 	<title>Welcome</title>
 </head>
 <body>
-	Hello, world.
+	<div> Hello, world.</div>
+	<div>      </div>
  <img src="https://www.google.com.hk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" >
 </body>
 </html>
