--- a/HelloGoogle.html
+++ b/HelloGoogle.html
@@ -5,8 +5,9 @@
 	<title>Welcome</title>
 </head>
 <body>
-	<div> Hello, world.</div>
+	<div> Hello, world!</div>
 	<div>      </div>
  <img src="https://www.google.com.hk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" >
+ 	<div>hello, google</div>
 </body>
 </html>
