change the body content

--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome to my webpage</title>
+	<title>Welcome page</title>
 </head>
 <body>
-	Hello, world. This is WXZ from shenzhen. PLEASE USE MY RULES
+	Hello, world. 
 </body>
 </html>
